# graphql-rs-test

./: Cargo.toml
src/: data.rs  main.rs  model.rs
