[package]
name = "graphql-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-graphql = "6.0.7"
async-graphql-axum = "6.0.7"
async-graphql-poem = "6.0.7"
poem = { version = "1.3.58", features = ["anyhow"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.33.0", features = ["full"]}
