[package]
name = "graphql-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-graphql = { version = "6.0.7", features = ["tracing", "log"]}
async-graphql-poem = "6.0.7"
futures = "0.3.30"
paste = "1.0.14"
poem = { version = "1.3.58", features = ["anyhow"] }
slab = "0.4.9"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.33.0", features = ["full"]}
tracing-subscriber = { version = "0.3.9", features = ["env-filter"]}
